--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body {
 }
 p {
   line-height: 1.5;
-  margin: 30px 0;
+  margin: 20px 0;
 }
 p a {
   /* text-decoration: underline */
@@ -19,7 +19,13 @@ p a {
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 800;
+  font-weight: 700;
+}
+h1 {
+  margin-top: 40px
+}
+h2 {
+  margin-top: 30px
 }
 a {
   color: #008AFF;
@@ -34,6 +40,9 @@ blockquote {
 }
 blockquote p:first-child {
   margin-top: 0;
+}
+.blog-post {
+  padding-bottom: 20px;
 }
 hr.small {
   max-width: 100px;
@@ -651,11 +660,6 @@ pre code {
 }
 pre.highlight, .highlight > pre, td.code pre {
   background: #FAFAFA;
-  background-image: linear-gradient(#F9F9F9 50%, #FDFDFD 50%);
-  background-repeat: repeat;
-  background-size: 3em 3em;
-  background-position: 0px 10px;
-  border-left: 7px solid #444;
 }
 code table, code table td, code table th, code table tbody, code table tr,
 td.gutter pre {
@@ -664,7 +668,9 @@ td.gutter pre {
   background-color: #fff;
 }
 .highlight > pre {
-  padding: 0;
+  padding: 4px;
+  padding-left: 8px;
+  font-size: 14px;
 }
 td.code pre {
   border-width: 0 0 0 2px;
